[project]
name = "tts-dante"
description = "Derivation Assistant for Novel Telemetry Expression"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Apache-2.0"}
authors = [
  { name = "muszynsk", email = "matt.muszynski@jpl.nasa.gov" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "pytest",
  "scipy",
  "tts-data-utils>=0.2.0,<1.0.0",
  "tts-papertrail>=0.1.1,<1.0.0",
  "tts-utilities>=0.2.0,<1.0.0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/NASA-JPL-Teamtools-Studio/tts_dante"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"html_utils" = ["resources/html_templates/*.html"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[build-system]
requires = [
    "setuptools", 
    "wheel", 
    "toml", 
    "setuptools-scm",
    "tts-utilities>=0.2.0,<1.0.0"
    ]
build-backend = "setuptools.build_meta"

